erDiagram

       %% Book Table (Sach)
    BOOK {
        int BookID PK
        string BookName
        float Price
        int Quantity
        int AuthorID FK
    }

    %% Author Table (TacGia)
    AUTHOR {
        int AuthorID PK
        string AuthorName
    }

    %% Genre Table (TheLoai)
    GENRE {
        int GenreID PK
        string GenreName
    }

    %% Invoice Table (HoaDon)
    INVOICE {
        int InvoiceID PK
        date InvoiceDate
        float AmountPaid
        int CustomerID FK
        int EmployeeID FK
    }

    %% Invoice Detail Table (ChiTietHoaDon)
    INVOICEDETAIL {
        int InvoiceDetailID PK
        int Quantity
        float SalePrice
        int BookID FK
        int InvoiceID FK
    }

    %% Account Table (TaiKhoan)
    ACCOUNT {
        int AccountID PK
        string Email
        string Password
        string FullName
        boolean IsAdmin
    }

    %% Customer Table (KhachHang)
    CUSTOMER {
        int CustomerID PK
        string FullName
        string Address
        string PhoneNumber
        string Email
        date BirthDate
        string Note
        date CreatedDate 
    }

    %% Employee Table (NhanVien)
     %% Employee Table (NhanVien) - Updated with AvatarImagePath
    EMPLOYEE {
        int EmployeeID PK
        string FullName
        string Address
        string PhoneNumber
        string Email
        int AccountID FK
        date HireDate
        date BirthDate
        string Note
        string AvatarImagePath
    }

    %% Bảng trung gian giữa BOOK và GENRE (Quan hệ nhiều - nhiều)
    BOOK_GENRE {
        int BookID FK
        int GenreID FK
    }

    %% Relationships
    BOOK ||--o{ AUTHOR : "has"
    BOOK ||--o{ BOOK_GENRE : "categorized as"
    GENRE ||--o{ BOOK_GENRE : "contains"
    INVOICE ||--o{ CUSTOMER : "belongs to"
    INVOICE ||--o{ EMPLOYEE : "handled by"
    INVOICEDETAIL ||--o{ BOOK : "contains"
    INVOICEDETAIL ||--o{ INVOICE : "part of"
    EMPLOYEE ||--|| ACCOUNT : "has"
